--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-  <script src="./script.js"/>
+  <script src="script.js"/>
 </body>
 </html>
