--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DevLinks - Diego Javiel</title>
   <link rel="stylesheet" href="style.css">
+
+  <script src="./script.js" defer></script>
 </head>
 <body>
 
@@ -43,6 +45,6 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-  <script src="script.js"/>
+  <!-- <script src="./script.js"/> -->
 </body>
 </html>
